# ASREp

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.py
ASRE3D_Matlab_version/: ASRE3DpaperResult.mat  ASRE_burd.asv  ASRE_burd.m  Camos_open_mesh_dummy_interWall_v2_step3.mat  PlotDefoMesh.m  PlotElemFieldonMesh.m  PlotMesh.m  computeFLEX16int_v4_test.m  computeKKfootAndBodyForce_v2.m  computeKLocalLE8nodeBrickAndVolume_v2.m  f_int_mind_TAB.m  f_int_mind_Talphai.m  f_int_mind_dx_p.m  f_int_mind_dx_q.m  f_int_mind_dy_q.m  f_int_mind_dz_p.m  f_int_mind_dz_q.m  int_factor_mindlin_j_1_vect_Vasiri_jz_boundary.m  int_factor_mindlin_j_2_vect_Vasiri_jz_boundary.m  int_factor_mindlin_j_3_vect_Vasiri_boundary.m  kansler10_ASRE_v2.asv  point_factor_mindlin_j_1_vect_Vasiri_jz.m  point_factor_mindlin_j_2_vect_Vasiri_jz.m  point_factor_mindlin_j_3_vect_Vasiri.m  script_int_mind.m  shape3d.m  u_3D_comas_v2.m
ASREp/: ASRE_2D_frame_model.py  ASRE_3D_solid_model.py  ASRE_Timoshenko_model.py  __init__.py  ground_deformation_models.py
ASREp/ASREcpp/: build.ps1
ASREp/ASREcpp/debug/: main.cpp
ASREp/ASREcpp/src/: ASRElib2DFrame.cpp  ASRElib3DSolid.cpp  CMakeLists.txt  build_mac_arm.sh
ASREp/ASREcpp/src/inc/: ASRE_3DSolid_functions.h  ASRE_Frame_functions.h  ASRE_Timo_functions.h  Soil_FLEX_functions.h
ASREp/ASREcpp/testing/: frame2D.py  run_model.py
ASREpy/: ASRE_2D_frame_model.py  ASRE_Timoshenko_model.py  __init__.py  ground_deformation_models.py
ASREpy/ASREcpp/: build.ps1
ASREpy/ASREcpp/debug/: main
ASREpy/ASREcpp/src/: ASRElib.cpp  ASRElibTimoBeam.cpp  CMakeLists.txt
ASREpy/ASREcpp/src/inc/: ASRE_Frame_functions.h  ASRE_Timo_functions.h
ASREpy/ASREcpp/testing/: frame2D.py  run_model.py
BuildingMesh/: PlotMesh.m  burd_mat_20250901T162943.mat  burd_mesh.m  camos_mat_20250901T163001.mat  camos_mesh.m  demo1.m  demo2.m  demo4.m  demo5.m  dist.m  intersect2lineGiven4Points2D.m  license.txt  linexline.m  meshOnCurve.m  meshOnCurveWithFixNodes.m  meshOnCurveWithFixSegment.m  offsetCurveIn.m  offsetCurveOut.m  offsetCurveOut_old.m  offsetWallNodes.m  projectOnLine.m
Examples/2DFrames/: 2DFramesValidation.ipynb  2DFramesValidation.py  2DFramesVerification.ipynb  2story_frame.ipynb  opensees_K.txt
Examples/2DFrames/VerificationData/: FR2c2_q100_ux.csv  FR2c2_q100_uz.csv  FR2c2_q10_ux.csv  FR2c2_q10_uz.csv  FR2c2_q50_ux.csv  FR2c2_q50_uz.csv  FR2c4_q100_ux.csv  FR2c4_q100_uz.csv  FR2c4_q10_ux.csv  FR2c4_q10_uz.csv  FR2c4_q50_ux.csv  FR2c4_q50_uz.csv  FR4c2_q100_ux.csv  FR4c2_q100_uz.csv  FR4c2_q10_ux.csv  FR4c2_q10_uz.csv  FR4c2_q50_ux.csv  FR4c2_q50_uz.csv  FR4c4_q100_ux.csv  FR4c4_q100_uz.csv  FR4c4_q10_ux.csv  FR4c4_q10_uz.csv  FR4c4_q50_ux.csv  FR4c4_q50_uz.csv
Examples/3DBearingWalls/: plot_strains.m  zhao_2023_validation.ipynb  zhao_2023_validation.py  zhao_2023_validation_plot.ipynb
Examples/3DBearingWalls/input/: Yiu_GF.mat  Yiu_GF_ecc10.mat  Yiu_GF_ecc15.mat  Yiu_GF_ecc20.mat  Yiu_GF_ecc25.mat  Yiu_GF_ecc5.mat
Examples/3DBearingWalls/output/: greenfield_ground_disp.txt  model_el.pkl  model_ep.pkl  nodal_displacement_elastic.txt  nodal_displacement_elastoplastic.txt  principal_strain_elastic.txt  principal_strain_elastoplastic.txt  strain_plot_elastic.fig  strain_plot_elastic.m  strain_plot_elastoplastic.fig
Examples/3DFrames/: 3DFrames.ipynb
Examples/3DFrames/VerificationData/: FranzaDeJong-VL2p0-Ux-GF.csv
Examples/EquivalentBeam/: EquivalentBeamValidation.ipynb  EquivalentBeamVerification.ipynb
Examples/EquivalentBeam/ValidationData/: FranzaDeJongSTR-1-VL0p5-Ux-GF.csv  FranzaDeJongSTR-1-VL0p5-Uz.csv  FranzaDeJongSTR-1-VL4p0-Uz-GF.csv  FranzaDeJongSTR-4-VL0p5-Uz-GF.csv  FranzaDeJongSTR-4-VL2p0-Uz.csv  FranzaDeJongSTR-4-VL4p0-Uz-GF.csv
Examples/EquivalentBeam/VerificationData/: FranzaDeJongSTR-1-VL0p5-Uz-GF.csv  FranzaDeJongSTR-1-VL2p0-Uz-GF.csv  FranzaDeJongSTR-1-VL4p0-Ux.csv  FranzaDeJongSTR-4-VL0p5-Uz.csv  FranzaDeJongSTR-4-VL2p0-Uz-GF.csv  FranzaDeJongSTR-4-VL4p0-Ux-GF.csv  FranzaDeJongSTR-4-VL4p0-Uz.csv
Examples/compare_timoshenko_vs_2DFrame/: compare.ipynb  test_stiffness.ipynb
Examples/compare_timoshenko_vs_2DFrame/VerificationData/: FranzaDeJongSTR-1-VL2p0-Uz.csv  FranzaDeJongSTR-1-VL4p0-Uz.csv
Postprocessing_in_FEM/: PlotFieldonDefoMesh.m  PlotFieldonMesh.m  SetColorbar.m
